WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152494
FTL B3 should do tail calls
https://bugs.webkit.org/show_bug.cgi?id=152494
Summary
FTL B3 should do tail calls
Filip Pizlo
Reported
2015-12-21 17:30:00 PST
Patch forthcoming.
Attachments
work in progress
(8.64 KB, patch)
2015-12-21 17:31 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(10.89 KB, patch)
2015-12-22 11:27 PST
,
Filip Pizlo
msaboff
: review+
Details
Formatted Diff
Diff
pathc for landing
(10.88 KB, patch)
2015-12-22 11:38 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-12-21 17:31:31 PST
Created
attachment 267768
[details]
work in progress
Filip Pizlo
Comment 2
2015-12-22 11:27:41 PST
Created
attachment 267792
[details]
the patch
WebKit Commit Bot
Comment 3
2015-12-22 11:28:51 PST
Attachment 267792
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5077: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5117: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Saboff
Comment 4
2015-12-22 11:32:13 PST
Comment on
attachment 267792
[details]
the patch r=me
Filip Pizlo
Comment 5
2015-12-22 11:37:30 PST
(In reply to
comment #4
)
> Comment on
attachment 267792
[details]
> the patch > > r=me
Thanks! I'll fix the build and land.
Filip Pizlo
Comment 6
2015-12-22 11:38:18 PST
Created
attachment 267793
[details]
pathc for landing
WebKit Commit Bot
Comment 7
2015-12-22 11:39:33 PST
Attachment 267793
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5077: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5117: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 8
2015-12-22 12:03:51 PST
Landed in
http://trac.webkit.org/changeset/194368
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug